--- a/home.html
+++ b/home.html
@@ -36,10 +36,10 @@
          <img src="images/home-img.png" class="image" alt="">
          <h3 class="name">TSHIFHIWA</h3>
          <p class="role">Tutor</p>
-         <a href="profile.html" class="btn">view profile</a>
+         <a href="pages/profile.html" class="btn">view profile</a>
          <div class="flex-btn">
-            <a href="login.html" class="option-btn">login</a>
-            <a href="register.html" class="option-btn">register</a>
+            <a href="pages/login.html" class="option-btn">login</a>
+            <a href="pages/register.html" class="option-btn">register</a>
          </div>
       </div>
 
@@ -57,15 +57,15 @@
       <img src="images/home-img.png" class="image" alt="">
       <h3 class="name">TSHIFHIWA</h3>
       <p class="role">Tutor</p>
-      <a href="profile.html" class="btn">view profile</a>
+      <a href="pages/profile.html" class="btn">view profile</a>
    </div>
 
    <nav class="navbar">
       <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
-      <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
-      <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
-      <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
-      <a href="contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
+      <a href="pages/about.html"><i class="fas fa-question"></i><span>about</span></a>
+      <a href="pages/courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
+      <a href="pages/teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
+      <a href="pages/contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
    </nav>
 
 </div>
@@ -115,7 +115,7 @@
       <div class="box">
          <h3 class="title">become a tutor</h3>
          <p class="tutor">Share Your Knowledge, Inspire Others: Become a Tutor and Make a Difference Today!</p>
-         <a href="teachers.html" class="inline-btn">get started</a>
+         <a href="pages/teachers.html" class="inline-btn">get started</a>
       </div>
 
    </div>
@@ -143,7 +143,7 @@
             <span>13 videos</span>
          </div>
          <h3 class="title">complete HTML tutorial</h3>
-         <a href="playlist.html" class="inline-btn">view playlist</a>
+         <a href="pages/playlist.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -159,7 +159,7 @@
             <span>12 videos</span>
          </div>
          <h3 class="title">complete CSS tutorial</h3>
-         <a href="playlist.html" class="inline-btn">view playlist</a>
+         <a href="pages/playlist.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -175,7 +175,7 @@
             <span>15 videos</span>
          </div>
          <h3 class="title">complete JS tutorial</h3>
-         <a href="playlist.html" class="inline-btn">view playlist</a>
+         <a href="pages/playlist.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -191,7 +191,7 @@
             <span>13 videos</span>
          </div>
          <h3 class="title">complete Boostrap tutorial</h3>
-         <a href="playlist.html" class="inline-btn">view playlist</a>
+         <a href="pages/playlist.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -207,7 +207,7 @@
             <span>11 videos</span>
          </div>
          <h3 class="title">complete JQuery tutorial</h3>
-         <a href="playlist.html" class="inline-btn">view playlist</a>
+         <a href="pages/playlist.html" class="inline-btn">view playlist</a>
       </div>
 
       <div class="box">
@@ -223,13 +223,13 @@
             <span>10 videos</span>
          </div>
          <h3 class="title">complete SASS tutorial</h3>
-         <a href="playlist.html" class="inline-btn">view playlist</a>
+         <a href="pages/playlist.html" class="inline-btn">view playlist</a>
       </div>
 
    </div>
 
    <div class="more-btn">
-      <a href="courses.html" class="inline-option-btn">view all courses</a>
+      <a href="pages/courses.html" class="inline-option-btn">view all courses</a>
    </div>
 
 </section>
