--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- derecting index.html  to regiter.html   -->
+  <meta http-equiv="refresh" content="0; URL= Authentication/loginAndRegisterScreen.html">
+
    <title>home</title>
 
    <!-- font awesome cdn link  -->
@@ -18,7 +22,7 @@
 <header class="header">
    
    <section class="flex">
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -61,7 +65,7 @@
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="pages/about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="pages/courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="pages/teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
