--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- derecting index.html  to regiter.html   -->
-  <meta http-equiv="refresh" content="0; URL= Authentication/loginAndRegisterScreen.html">
+  <!-- <meta http-equiv="refresh" content="0; URL= Authentication/loginAndRegisterScreen.html"> -->
 
    <title>home</title>
 
