--- a/pages/playlist_tshifhiwa.html
+++ b/pages/playlist_tshifhiwa.html
@@ -39,7 +39,7 @@
          <p class="role">Tutor</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
-            <a href="login.html" class="option-btn">login</a>
+            <a href="login.html" class="option-btn">Login</a>
             <a href="register.html" class="option-btn">register</a>
          </div>
       </div>
@@ -118,31 +118,31 @@
          <h3>Complete Computer Networks tutorial (part 01)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="watch-video-2.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-2.gif" alt="">
          <h3>Complete Computer Networks tutorial (part 02)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="watch-video-3.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-3.gif" alt="">
          <h3>Complete Computer Networks tutorial (part 03)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="watch-video-4.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-4.gif" alt="">
          <h3>Complete Computer Networks tutorial (part 04)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="watch-video-5.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-5.gif" alt="">
          <h3>Complete Computer Networks tutorial (part 05)</h3>
       </a>
 
-      <a class="box" href="watch-video.html">
+      <a class="box" href="watch-video-6.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-6.gif" alt="">
          <h3>Complete Computer Networks tutorial (part 06)</h3>
