made some changes to the project

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,7 +19,7 @@
    
    <section class="flex">
 
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="../index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -62,7 +62,7 @@
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="../index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
@@ -132,11 +132,11 @@
    <div class="box-container">
 
       <div class="box">
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, suscipit a. Quibusdam, dignissimos consectetur. Sed ullam iusto eveniet qui aut quibusdam vero voluptate libero facilis fuga. Eligendi eaque molestiae modi?</p>
+         <p>"Tshifhiwa's Computer Networks course was incredibly insightful. The concepts were explained in a clear and engaging manner, making it easy to understand even the most complex topics. I feel much more confident in my knowledge of networking protocols and internet communication. Highly recommended!"</p>
          <div class="student">
             <img src="images/pic-2.jpg" alt="">
             <div>
-               <h3>john deo</h3>
+               <h3>John D</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -149,11 +149,11 @@
       </div>
 
       <div class="box">
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, suscipit a. Quibusdam, dignissimos consectetur. Sed ullam iusto eveniet qui aut quibusdam vero voluptate libero facilis fuga. Eligendi eaque molestiae modi?</p>
+         <p>"The course provided a great foundation in computer networks. The practical examples and real-world applications made the lessons relevant and easy to follow. The only reason I'm not giving it 5 stars is because I wish there were more hands-on labs. Overall, a great learning experience!"</p>
          <div class="student">
             <img src="images/pic-3.jpg" alt="">
             <div>
-               <h3>john deo</h3>
+               <h3>Lerato M</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -166,11 +166,11 @@
       </div>
 
       <div class="box">
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, suscipit a. Quibusdam, dignissimos consectetur. Sed ullam iusto eveniet qui aut quibusdam vero voluptate libero facilis fuga. Eligendi eaque molestiae modi?</p>
+         <p>"Tshifhiwa's Extra Classes offered a deep dive into computer networks that was both thorough and accessible. The lessons on network protocols and data transmission were particularly helpful for my studies. I would recommend this course to anyone looking to strengthen their understanding of networking."</p>
          <div class="student">
             <img src="images/pic-4.jpg" alt="">
             <div>
-               <h3>john deo</h3>
+               <h3>Thabo N</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -183,7 +183,7 @@
       </div>
 
       <div class="box">
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, suscipit a. Quibusdam, dignissimos consectetur. Sed ullam iusto eveniet qui aut quibusdam vero voluptate libero facilis fuga. Eligendi eaque molestiae modi?</p>
+         <p>"This course exceeded my expectations. Tshifhiwa made learning about computer networks enjoyable and easy to grasp. The content was rich with information, and the real-world examples helped solidify my understanding. I would definitely take more courses from Tshifhiwa's Extra Classes."</p>
          <div class="student">
             <img src="images/pic-5.jpg" alt="">
             <div>
@@ -200,11 +200,11 @@
       </div>
 
       <div class="box">
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, suscipit a. Quibusdam, dignissimos consectetur. Sed ullam iusto eveniet qui aut quibusdam vero voluptate libero facilis fuga. Eligendi eaque molestiae modi?</p>
+         <p>"Thanks to Tshifhiwa's Extra Classes, I achieved a distinction in Computer Networks. The clear and engaging teaching methods, combined with practical exercises, made complex topics easy to understand. The personalized support and valuable resources provided were key to my success. Highly recommend these classes for anyone aiming for excellence!"</p>
          <div class="student">
             <img src="images/pic-6.jpg" alt="">
             <div>
-               <h3>john deo</h3>
+               <h3>Thabo Mokoena</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
@@ -217,11 +217,11 @@
       </div>
 
       <div class="box">
-         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, suscipit a. Quibusdam, dignissimos consectetur. Sed ullam iusto eveniet qui aut quibusdam vero voluptate libero facilis fuga. Eligendi eaque molestiae modi?</p>
+         <p>"Tshifhiwa's Extra Classes were instrumental in my success, earning me a distinction in Computer Networks. The structured lessons and hands-on approach made challenging concepts accessible. The support from Tshifhiwa was exceptional, and the course materials were top-notch. I’m grateful for the guidance and highly recommend these classes to anyone looking to excel!"</p>
          <div class="student">
             <img src="images/pic-7.jpg" alt="">
             <div>
-               <h3>john deo</h3>
+               <h3>Ayesha Khan</h3>
                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
