--- a/pages/playlist_tshifhiwa.html
+++ b/pages/playlist_tshifhiwa.html
@@ -19,7 +19,7 @@
    
    <section class="flex">
 
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="../index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -62,7 +62,7 @@
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="../index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
@@ -115,37 +115,37 @@
       <a class="box" href="watch-video.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-1.gif" alt="">
-         <h3>Complete Computer Networks tutorial (part 01)</h3>
+         <h3>Introduction to Computer Networks tutorial (part 01)</h3>
       </a>
 
       <a class="box" href="watch-video-2.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-2.gif" alt="">
-         <h3>Complete Computer Networks tutorial (part 02)</h3>
+         <h3>Basic characteristics of computer networks  (part 02)</h3>
       </a>
 
       <a class="box" href="watch-video-3.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-3.gif" alt="">
-         <h3>Complete Computer Networks tutorial (part 03)</h3>
+         <h3> Network protocols and communication(part 03)</h3>
       </a>
 
       <a class="box" href="watch-video-4.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-4.gif" alt="">
-         <h3>Complete Computer Networks tutorial (part 04)</h3>
+         <h3>Network protocols and communication(part 04)</h3>
       </a>
 
       <a class="box" href="watch-video-5.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-5.gif" alt="">
-         <h3>Complete Computer Networks tutorial (part 05)</h3>
+         <h3>Network Protocols (part 05)</h3>
       </a>
-
+      
       <a class="box" href="watch-video-6.html">
          <i class="fas fa-play"></i>
          <img src="images/post-1-6.gif" alt="">
-         <h3>Complete Computer Networks tutorial (part 06)</h3>
+         <h3>How data moves accross the internet (part 06)</h3>
       </a>
 
    </div>
