--- a/pages/watch-video-2.html
+++ b/pages/watch-video-2.html
@@ -17,7 +17,7 @@
 
 <header class="header">
    <section class="flex">
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="../index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
          <button type="submit" class="fas fa-search"></button>
@@ -52,7 +52,7 @@
       <a href="profile.html" class="btn">view profile</a>
    </div>
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="../index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
@@ -65,15 +65,15 @@
        <div class="video" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto;">
           <iframe id="video-iframe" src="https://www.youtube.com/embed/m8eNwVel5xI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
        </div>
-       <h3 class="title">Complete HTML Tutorial (Part 02)</h3>
+       <h3 class="title">Basic characteristics of computer networks (Part 02)</h3>
        <div class="info">
           <p class="date"><i class="fas fa-calendar"></i><span>22-10-2022</span></p>
           <p class="date"><i class="fas fa-heart"></i><span>44 likes</span></p>
        </div>
        <div class="tutor">
-          <img src="images/pic-2.jpg" alt="">
+          <img src="images/pic-1.jpg" alt="">
           <div>
-             <h3>TSHIFHIWA</h3>
+             <h3>Prabhu Subramanian</h3>
              <span>Developer</span>
           </div>
        </div>
@@ -82,8 +82,7 @@
           <button><i class="far fa-heart"></i><span>Like</span></button>
        </form>
        <p class="description">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque labore ratione, hic exercitationem mollitia obcaecati culpa dolor placeat provident porro.
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure autem non fugit sint. A, sequi rerum architecto dolor fugiat illo, iure velit nihil laboriosam cupiditate voluptatum facere cumque nemo!
+        This video introduces the basic characteristics of computer networks, offering a foundational understanding of how networks function and their significance in the digital world
        </p>
     </div>
  </section>
@@ -101,11 +100,11 @@
          <div class="user">
             <img src="images/pic-1.jpg" alt="">
             <div>
-               <h3>TSHIFHIWA</h3>
+               <h3>Brayn</h3>
                <span>22-10-2022</span>
             </div>
          </div>
-         <div class="comment-box">this is a comment form Brain</div>
+         <div class="comment-box">This is a comment from Brayn</div>
          <form action="" class="flex-btn">
             <input type="submit" value="edit comment" name="edit_comment" class="inline-option-btn">
             <input type="submit" value="delete comment" name="delete_comment" class="inline-delete-btn">
@@ -119,7 +118,7 @@
                <span>22-10-2022</span>
             </div>
          </div>
-         <div class="comment-box">awesome tutorial! keep going!</div>
+         <div class="comment-box">Awesome tutorial! keep going!</div>
       </div>
       <div class="box">
          <div class="user">
@@ -159,7 +158,7 @@
                <span>22-10-2022</span>
             </div>
          </div>
-         <div class="comment-box">thanks for the tutorial! how to download source code file?</div>
+         <div class="comment-box">thanks for the tutorial!</div>
       </div>
    </div>
 </section>
