--- a/pages/watch-video-5.html
+++ b/pages/watch-video-5.html
@@ -66,15 +66,15 @@
             <!-- Use the YouTube embed URL format -->
             <iframe id="video-iframe" src="https://www.youtube.com/embed/E5bSumTAHZE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
         </div>
-        <h3 class="title">Complete HTML Tutorial (Part 05)</h3>
+        <h3 class="title">Network Protocols (Part 05)</h3>
         <div class="info">
             <p class="date"><i class="fas fa-calendar"></i><span>22-10-2022</span></p>
             <p class="date"><i class="fas fa-heart"></i><span>44 likes</span></p>
         </div>
         <div class="tutor">
-            <img src="images/pic-2.jpg" alt="">
+            <img src="images/pic-1.jpg" alt="">
             <div>
-                <h3>TSHIFHIWA</h3>
+                <h3>Prabhu Subramanian</h3>
                 <span>Developer</span>
             </div>
         </div>
@@ -83,8 +83,7 @@
             <button><i class="far fa-heart"></i><span>Like</span></button>
         </form>
         <p class="description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque labore ratione, hic exercitationem mollitia obcaecati culpa dolor placeat provident porro.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure autem non fugit sint. A, sequi rerum architecto dolor fugiat illo, iure velit nihil laboriosam cupiditate voluptatum facere cumque nemo!
+            Explore the essential building blocks of digital communication with our comprehensive overview of network protocols. Network protocols are the standardized rules and procedures that enable seamless data exchange across diverse computer networks. They ensure that devices from different manufacturers and operating systems can communicate effectively, making global connectivity possible.
         </p>
     </div>
 </section>
