--- a/pages/watch-video-6.html
+++ b/pages/watch-video-6.html
@@ -17,7 +17,7 @@
 
 <header class="header">
    <section class="flex">
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="pages/index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
          <button type="submit" class="fas fa-search"></button>
@@ -52,7 +52,7 @@
       <a href="profile.html" class="btn">view profile</a>
    </div>
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="../index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
@@ -74,7 +74,7 @@
         <div class="tutor">
             <img src="images/pic-2.jpg" alt="">
             <div>
-                <h3>TSHIFHIWA</h3>
+                <h3>Prabhu Subramanian</h3>
                 <span>Developer</span>
             </div>
         </div>
