--- a/pages/watch-video.html
+++ b/pages/watch-video.html
@@ -19,7 +19,7 @@
    
    <section class="flex">
 
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="../index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -62,7 +62,7 @@
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="../index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
@@ -76,15 +76,15 @@
       <div class="video" style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto;">
          <iframe src="https://www.youtube.com/embed/VwN91x5i25g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
       </div>
-      <h3 class="title">Complete HTML Tutorial (Part 01)</h3>
+      <h3 class="title">Introduction to Computer Networks (Part 01)</h3>
       <div class="info">
          <p class="date"><i class="fas fa-calendar"></i><span>22-10-2022</span></p>
          <p class="date"><i class="fas fa-heart"></i><span>44 likes</span></p>
       </div>
       <div class="tutor">
-         <img src="images/pic-2.jpg" alt="">
+         <img src="images/pic-1.jpg" alt="">
          <div>
-            <h3>TSHIFHIWA</h3>
+            <h3>Prabhu Subramanian</h3>
             <span>Developer</span>
          </div>
       </div>
@@ -93,8 +93,7 @@
          <button><i class="far fa-heart"></i><span>Like</span></button>
       </form>
       <p class="description">
-         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque labore ratione, hic exercitationem mollitia obcaecati culpa dolor placeat provident porro.
-         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure autem non fugit sint. A, sequi rerum architecto dolor fugiat illo, iure velit nihil laboriosam cupiditate voluptatum facere cumque nemo!
+         In this video, we delve into the fundamental concepts of computer networks, exploring how different systems communicate and share resources. Whether you're new to the field or looking to refresh your knowledge, this introduction is made for you as well.
       </p>
    </div>
 </section>
@@ -119,11 +118,11 @@
          <div class="user">
             <img src="images/pic-1.jpg" alt="">
             <div>
-               <h3>TSHIFHIWA</h3>
+               <h3>Lutendo</h3>
                <span>22-10-2022</span>
             </div>
          </div>
-         <div class="comment-box">this is a comment form Tshifhiwa</div>
+         <div class="comment-box">this is a comment form lutendo</div>
          <form action="" class="flex-btn">
             <input type="submit" value="edit comment" name="edit_comment" class="inline-option-btn">
             <input type="submit" value="delete comment" name="delete_comment" class="inline-delete-btn">
@@ -134,7 +133,7 @@
          <div class="user">
             <img src="images/pic-2.jpg" alt="">
             <div>
-               <h3>john deo</h3>
+               <h3>Ryan</h3>
                <span>22-10-2022</span>
             </div>
          </div>
