made some changes to the project

--- a/pages/watch-video-3.html
+++ b/pages/watch-video-3.html
@@ -17,7 +17,7 @@
 
 <header class="header">
    <section class="flex">
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="../index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
          <button type="submit" class="fas fa-search"></button>
