--- a/pages/register.html
+++ b/pages/register.html
@@ -24,7 +24,7 @@
    
    <section class="flex">
 
-      <a href="home.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
+      <a href="../index.html" class="logo">TSHIFHIWA'S XTRA CLASSES.</a>
 
       <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
@@ -67,7 +67,7 @@
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
+      <a href="../index.html"><i class="fas fa-home"></i><span>home</span></a>
       <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
       <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
       <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
