--- a/pages/watch-video-6.html
+++ b/pages/watch-video-6.html
@@ -66,7 +66,7 @@
             <!-- Correct YouTube embed URL format -->
             <iframe id="video-iframe" src="https://www.youtube.com/embed/YJGGYKAV4pA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
         </div>
-        <h3 class="title">Complete HTML Tutorial (Part 05)</h3>
+        <h3 class="title">How data moves accross the internet (Part 06)</h3>
         <div class="info">
             <p class="date"><i class="fas fa-calendar"></i><span>22-10-2022</span></p>
             <p class="date"><i class="fas fa-heart"></i><span>44 likes</span></p>
@@ -83,8 +83,7 @@
             <button><i class="far fa-heart"></i><span>Like</span></button>
         </form>
         <p class="description">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Itaque labore ratione, hic exercitationem mollitia obcaecati culpa dolor placeat provident porro.
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid iure autem non fugit sint. A, sequi rerum architecto dolor fugiat illo, iure velit nihil laboriosam cupiditate voluptatum facere cumque nemo!
+         In this video, we delve into the fascinating journey of data as it travels through the internet. From your device to the world wide web and back, discover the complex process that enables seamless communication and information sharing across the globe.
         </p>
     </div>
 </section>
@@ -105,11 +104,11 @@
          <div class="user">
             <img src="images/pic-1.jpg" alt="">
             <div>
-               <h3>TSHIFHIWA</h3>
+               <h3>Brayn</h3>
                <span>22-10-2022</span>
             </div>
          </div>
-         <div class="comment-box">this is a comment form Brain</div>
+         <div class="comment-box">this is a comment form Brayn</div>
          <form action="" class="flex-btn">
             <input type="submit" value="edit comment" name="edit_comment" class="inline-option-btn">
             <input type="submit" value="delete comment" name="delete_comment" class="inline-delete-btn">
