--- a/Authentication/loginAndRegisterScreen.html
+++ b/Authentication/loginAndRegisterScreen.html
@@ -18,11 +18,11 @@
             <h2 class="title">Sign in</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input type="text" placeholder="Username"  id="UserLogINName" />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="Password" id="UserLogINPassword" />
             </div>
             <input type="submit" value="Login" class="btn solid" />
             <p class="social-text">Or Sign in with social platforms</p>
@@ -45,17 +45,17 @@
             <h2 class="title">Sign up</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+              <input type="text" placeholder="User Name" id="UserSignUpname" />
             </div>
             <div class="input-field">
               <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+              <input type="email" placeholder="Email"  id="userSignupEmail"/>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+              <input type="password" placeholder="UserSignPassword" />
             </div>
-            <input type="submit" class="btn" value="Sign up" />
+            <button type="button" class="btn"  onclick="getUserInput()" >Sign up</button>
             <p class="social-text">Or Sign up with social platforms</p>
             <div class="social-media">
               <a href="#" class="social-icon">
@@ -106,5 +106,6 @@
     </div>
 
     <script src="../js/login.js"></script>
+    <script src ="./authentication.js"></script>
   </body>
 </html>
