--- a/Authentication/loginAndRegisterScreen.html
+++ b/Authentication/loginAndRegisterScreen.html
@@ -45,7 +45,7 @@
             <h2 class="title">Sign up</h2>
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="User Name" id="UserSignUpname" />
+              <input type="text" placeholder="User Name" id="UserSignUpname" name="UserSignUpname"/>
             </div>
             <div class="input-field">
               <i class="fas fa-envelope"></i>
