--- a/Authentication/loginAndRegisterScreen.html
+++ b/Authentication/loginAndRegisterScreen.html
@@ -53,7 +53,7 @@
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="UserSignPassword" />
+              <input type="password" placeholder="User Password" id="password" />
             </div>
             <button type="button" class="btn"  onclick="getUserInput()" >Sign up</button>
             <p class="social-text">Or Sign up with social platforms</p>
