--- a/Authentication/loginAndRegisterScreen.html
+++ b/Authentication/loginAndRegisterScreen.html
@@ -43,10 +43,7 @@
           </form>
           <form action="#" class="sign-up-form">
             <h2 class="title">Sign up</h2>
-            <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input type="text" placeholder="User Name" id="UserSignUpname" name="UserSignUpname"/>
-            </div>
+           
             <div class="input-field">
               <i class="fas fa-envelope"></i>
               <input type="email" placeholder="Email"  id="userSignupEmail"/>
@@ -54,6 +51,10 @@
             <div class="input-field">
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="User Password" id="password" />
+            </div>
+            <div class="input-field">
+              <i class="fas  fa-lock"></i>
+              <input type="password" placeholder="Confirm Password" id="ConfirmPassword" name="Confirm Password"/>
             </div>
             <button type="button" class="btn"  onclick="getUserInput()" >Sign up</button>
             <p class="social-text">Or Sign up with social platforms</p>
